namespace ShelfMarket.Domain.Enums;

public enum PrivilegeLevel
{
    Guest = 0,
    User = 1,
    Admin = 2
}
