using System.Windows.Controls;

namespace ShelfMarket.UI.Views.UserControls
{
    public partial class TenantView : UserControl
    {
        public TenantView() { InitializeComponent(); }
    }
}
