using System.Windows.Controls;

namespace ShelfMarket.UI.Views.UserControls;

/// <summary>
/// Interaction logic for EventsView.xaml
/// </summary>
public partial class EventsView : UserControl
{
    public EventsView()
    {
        InitializeComponent();
    }
}
