using System.Windows.Controls;

namespace ShelfMarket.UI.Views.UserControls;

/// <summary>
/// Interaction logic for FinanceView.xaml
/// </summary>
public partial class FinanceView : UserControl
{
    public FinanceView()
    {
        InitializeComponent();
    }
}
