using System.Windows;
using System.Windows.Controls;

namespace ShelfMarket.UI.Views
{
    /// <summary>
    /// Interaction logic for MaintenanceView.xaml
    /// </summary>
    public partial class MaintenanceView : UserControl
    {
        public MaintenanceView()
        {
            InitializeComponent();
        }
    }
}
