classDiagram

    namespace ShelfMarket.UI.Views {
        class SideMenuView {
            +DataContext: SideMenuViewModel
            +LeftMenu: ListBox
        }
    }

    namespace ShelfMarket.UI.ViewModels {

        class SideMenuViewModel {
            +CurrentLevel: PrivilegeLevel
            +SideMenuItems: ObservableCollection~SideMenuItem~
            +SelectedMenuItem: SideMenuItem
            +MenuItemCommand: ICommand
            +CanCommand(): bool
            +OnCommand(): void
            +RefreshMenuVisibilityAndSelection(): void
            +IsItemVisibleForCurrentLevel(item: SideMenuItem): bool
        }
    }
        class SideMenuItem {
            +Title: string
            +View: UserControl
            +Privilege: PrivilegeLevel
            +IsLogoff: bool
        }




    namespace ShelfMarket.Application.Interfaces {
        class IPrivilegeService {
            <<interface>>
            +CurrentLevel: PrivilegeLevel
            +CanAccess(required: PrivilegeLevel): bool
            +SignOut(): void
            +CurrentLevelChanged: event
        }
    }

    namespace ShelfMarket.Domain.Enums {
        class PrivilegeLevel {
            <<enumeration>>
            "Guest"
            "User"
            "Admin"
        }
    }

    namespace System.Windows.Controls {
        class UserControl {
            <<framework>>
        }
    }

    namespace ShelfMarket.UI.ViewModels.UserControls {
        class LoginView {
            <<UserControl>>
        }

        class ShelfView {
            <<UserControl>>
        }

        class SalesView {
            <<UserControl>>
        }

        class FinanceView {
            <<UserControl>>
        }

        class EventsView {
            <<UserControl>>
        }

        class TenantView {
            <<UserControl>>
        }

        class MaintenanceView {
            <<UserControl>>
        }
    }
    SideMenuView --> SideMenuViewModel : "DataContext"
    SideMenuViewModel --> IPrivilegeService : "uses"
    SideMenuViewModel *-- SideMenuItem : "SideMenuItems"
    SideMenuItem --> PrivilegeLevel : "requires"
    SideMenuItem --> UserControl : "View"

    LoginView --|> UserControl
    ShelfView --|> UserControl
    SalesView --|> UserControl
    FinanceView --|> UserControl
    EventsView --|> UserControl
    TenantView --|> UserControl
    MaintenanceView --|> UserControl